# project-tifo

./: README.md
src/: CMakeLists.txt  Makefile  Python_tests.ipynb  Test.ipynb  Test2.ipynb  color.cc  color.hh  dehaze  image.cc  image.hh  main.cc  matrix2D.cc  matrix2D.hh  morpho.cc  morpho.hh  video.cc  webcam.cc
src/real_time_oil-filter/: CMakeLists.txt  README.md
src/real_time_oil-filter/src/: bench.cc  filter.cu  filter.cuh  io_png.cc  io_png.hh  render.cc  render.hh  video.cc  video.hh
